# jalluindeksoija

./: Dockerfile  README.md  pyproject.toml
src/: bot.py  jalluindex.py
